helm/elk/elk-ingress-multihost.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elk-ingress
  namespace: elk
spec:
  rules:
    - host: kibana.elk
      http:
        paths:
          - backend:
              serviceName: elkstack-kibana
              servicePort: 443
    - host: elastic.elk
      http:
        paths:
          - backend:
              serviceName: elkstack-elasticsearch-client
              servicePort: 9200
    - host: logstash.elk
      http:
        paths:
          - backend:
              serviceName: elkstack-logstash
              servicePort: 5044
